tp/kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gp-prod
  namespace: gp-prod
spec:
  ingressClassName: traefik
  rules:
    - host: prod-k8s.gestion-produits.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php
                port:
                  number: 80
